# SmartTaskManager

./: .gitignore  README.md  alert.py  db.sqlite3  manage.py  ner.py  pyproject.toml  requirements.txt  sshkey.txt  sshkey.txt.pub  transcribe.py  vercel.json
.github/workflows/: host1_smart-task-manager-2.yml
base/: admin.py  models.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_remove_task_category_remove_task_date_and_more.py  0003_remove_category_task_remove_date_task_task_category_and_more.py  0004_alter_task_date_delete_date.py  0005_remove_task_date_remove_task_desc_desc_date.py  0006_remove_desc_task_task_date_task_desc_delete_date_and_more.py  0007_alter_task_category_delete_category.py  0008_alter_task_options_task_created_time.py  0009_alter_task_options_remove_task_created_time_and_more.py
base/templates/base/: dashboard.html  tab1.html  tab2.html  tab3.html  task_confirm_del.html  task_form.html  task_list.html
tasktodo/: asgi.py  settings.py  urls.py  wsgi.py
templates/: main.html  navbar.html
