[tool.poetry]
name = "tasktodo"
version = "0.1.0"
description = ""
authors = ["Farzeena P A <farzinaayub266@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

azure-cognitiveservices-speech = "1.26.0"

env = "0.1.0"

ipykernel = "6.22.0"
ipython = "8.11.0"


pytz = "2023.3"
pytz-deprecation-shim = "0.1.0.post0"
pywin32 = "306"


requests = "2.28.2"


toml = "0.10.2"
toolz = "0.12.0"
tornado = "6.2"
tqdm = "4.64.1"
traitlets = "5.9.0"
typing_extensions = "4.5.0"
tzdata = "2022.7"
tzlocal = "4.3"
urllib3 = "1.26.14"
validators = "0.20.0"
virtualenv = "20.21.0"

whisper = "1.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
