[tool.poetry]
name = "tasktodo"
version = "0.1.0"
description = ""
authors = ["Farzeena P A <farzinaayub266@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
gunicorn = "^20.1.0"

azure-cognitiveservices-speech = "1.26.0"
openai==0.27.4
openai-whisper @ git+https://github.com/openai/whisper.git@6dea21fd7f7253bfe450f1e2512a0fe47ee2d258


requests = "2.28.2"


toml = "0.10.2"
toolz = "0.12.0"
tornado = "6.2"
tqdm = "4.64.1"
traitlets = "5.9.0"
typing_extensions = "4.5.0"
tzdata = "2022.7"
tzlocal = "4.3"
urllib3 = "1.26.14"
validators = "0.20.0"
virtualenv = "20.21.0"

whisper = "1.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
